* Bibtopic support #1299
* Safer encoding for ConfigSet files #1297
* Qt defines on windows #1272
* QtDesigner library detection #1315
* Redundant check_dir call causing random uninstall failures #1313
* Append to moc flags instead of replacing them #1317
* Share moc tasks in the Qt processing #1318
* Fixed a source of unnecessary rebuilds in the Qt processing

NEW IN WAF 1.7.10
-----------------
* Enhancements in the LaTeX support #1248
* Codelite plugin by Christian Klein
* Validate the versioned library number #1180
* New export_defines keyword for C/C++/Fortran libraries
* Python config tests enhancements #1231 #1261
* Enable the distribution of non-python data files #1265
* Improved the boost configuration output #1266
* Exclude intltoolcache from waf dist # 1267
* Use Utils.readf/Utils.writef to prevent build cache loss on windows platforms

NEW IN WAF 1.7.9
----------------
* Improved the patch submitted in #1237 as it caused regressions
* Reverted the patch submitted in #1212 as it caused regressions
* Added a cache to waflib/extras/gccdeps.py #1244
* Unit test ut_exec was not obtained properly #1245

NEW IN WAF 1.7.8
----------------
* Fixed a configuration issue in the visual studio compiler (regression #1239)

NEW IN WAF 1.7.7
----------------
* XLC and XLF detection fixes #1230
* Fixed the multiple gcc/msvc builds #1237
* Better gdc detection on Ubuntu #1222
* Relative symlinks in symlink_as #1234
* Various improvements in the doxygen tool #1232 #1233
* Fixed windows filehandle issues on Python #1235
* Visual Studio 2012 detection improvements
* OSX soname installation fix

NEW IN WAF 1.7.6
----------------
* Better encapsulation of conf.check_cfg(uselib_store=...) defines #1212
* Support for python modules in fortran
* Extension files of D binaries on Mac
* Raise an error when a tex manually-provided dependency is not found #1209
* Enforce a stable name in bld(rule=..., name=undefined) to prevent rebuilds