@@ -10,6 +10,7 @@ NEW IN WAF 1.7.11
 * Append to moc flags instead of replacing them #1317
 * Share moc tasks in the Qt processing #1318
 * Fixed a source of unnecessary rebuilds in the Qt processing
+* Use LIB/INCLUDE environment variables in boost library detection on windows #1310
 
 NEW IN WAF 1.7.10
 -----------------
